# tic-tac-toe

./: LICENSE  tic-tac-toe.cabal
app/: Main.hs
src/: Lib.hs
