name:                tic-tac-toe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Enzo-Liu/tic-tac-toe#readme
license:             BSD3
license-file:        LICENSE
author:              Enzo Liu
maintainer:          liuenze6516@gmail.com
copyright:           Copyright: (c) 2016 Enzo Liu
category:            personal
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable tic-tac-toe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tic-tac-toe
                     , monad-loops
  default-language:    Haskell2010

test-suite tic-tac-toe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tic-tac-toe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Enzo-Liu/tic-tac-toe
